--- a/briar-android/src/main/res/values-fi/strings.xml
+++ b/briar-android/src/main/res/values-fi/strings.xml
@@ -62,6 +62,10 @@
   <string name="transport_bt">Bluetooth</string>
   <string name="transport_lan">Wi-Fi</string>
   <!--Notifications-->
+  <string name="reminder_notification_title">Uloskirjautunut Briarista</string>
+  <string name="reminder_notification_text">Napauta kirjautuaksesi takaisin sisään.</string>
+  <string name="reminder_notification_channel_title">Briarin sisäänkirjautumisen muistutus</string>
+  <string name="reminder_notification_dismiss">Hylkää</string>
   <string name="ongoing_notification_title">Kirjautunut Briariin</string>
   <string name="ongoing_notification_text">Napauta avataksesi Briar.</string>
   <plurals name="private_message_notification_text">
@@ -221,6 +225,8 @@
     <item quantity="one">%d viesti</item>
     <item quantity="other">%d viestiä</item>
   </plurals>
+  <string name="forum_new_entry_posted">Foorumikirjoitus julkaistu</string>
+  <string name="forum_new_message_hint">Uusi julkaisu</string>
   <string name="forum_message_reply_hint">Uusi vastaus</string>
   <string name="btn_reply">Vastaa</string>
   <string name="forum_leave">Lähde foorumista</string>
@@ -310,6 +316,8 @@
   <string name="pref_theme_title">Teema</string>
   <string name="pref_theme_light">Vaalea</string>
   <string name="pref_theme_dark">Tumma</string>
+  <string name="pref_theme_auto">Automaattinen (päiväsaika)</string>
+  <string name="pref_theme_system">Järjestelmäoletus</string>
   <!--Settings Network-->
   <string name="network_settings_title">Verkot</string>
   <string name="bluetooth_setting">Yhdistä Bluetoothin kautta</string>
@@ -322,6 +330,7 @@
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Turvallisuus</string>
   <string name="change_password">Vaihda salasana</string>
+  <string name="current_password">Nykyinen salasana</string>
   <string name="choose_new_password">Uusi salasana</string>
   <string name="confirm_new_password">Vahvista uusi salasana</string>
   <string name="password_changed">Salasana on vaihdettu.</string>
@@ -342,6 +351,8 @@
   <string name="uninstall_setting_summary">Tämä tulee vaatimaan manuaalisen varmennuksen paniikkitilanteessa</string>
   <!--Settings Notifications-->
   <string name="notification_settings_title">Ilmoitukset</string>
+  <string name="notify_sign_in_title">Muistuta minua kirjautumaan sisään</string>
+  <string name="notify_sign_in_summary">Näytä muistutus kun puhelin käynnistyy tai kun sovellus on päivitetty</string>
   <string name="notify_private_messages_setting_title">Yksityisviestit</string>
   <string name="notify_private_messages_setting_summary">Näytä ilmoitukset yksityisviesteistä</string>
   <string name="notify_private_messages_setting_summary_26">Aseta ilmoitukset yksityisviesteille</string>
@@ -393,10 +404,10 @@
   <string name="screen_filter_body">Toinen sovellus on piirtämässä Briarin päälle. Suojellakseen sinun turvallisuutta, Briar ei tule vastaamaan kosketuksiin silloin kun toinen sovellus on piirtämässä Briarin päälle.\n\nOn mahdollista, että seuraavat sovellukset piirtävät päälle:\n\n%1$s</string>
   <string name="screen_filter_allow">Salli näiden sovellusten piirtää päälle</string>
   <!--Permission Requests-->
-  <string name="permission_camera_title">Kameralupa</string>
+  <string name="permission_camera_title">Kameran käyttöoikeus</string>
   <string name="permission_camera_request_body">Skannatakseen QR koodin, Briar tarvitsee luvan käyttää kameraa.</string>
   <string name="permission_camera_denied_body">Olet kieltänyt käyttämästä kameraa, mutta yhteyshenkilöiden lisääminen vaatii kameran käyttöä.\n\nOle hyvä ja harkitse kameraluvan myöntämistä.</string>
-  <string name="permission_camera_denied_toast">Kameralupaa ei myönnetty</string>
+  <string name="permission_camera_denied_toast">Kameran käyttöoikeutta ei myönnetty</string>
   <string name="qr_code">QR-koodi</string>
   <string name="show_qr_code_fullscreen">Näytä QR-koodi koko näytöllä</string>
 </resources>
