--- a/briar-android/src/main/res/values-zh-rCN/strings.xml
+++ b/briar-android/src/main/res/values-zh-rCN/strings.xml
@@ -9,7 +9,7 @@
   <string name="setup_doze_title">后台连接</string>
   <string name="setup_doze_intro">为了收到消息，Briar 需要保持后台连接。</string>
   <string name="setup_doze_explanation">为了收到消息，Briar 需要保持后台连接。请禁用电量优化选项以使 Briar 保持连接。</string>
-  <string name="setup_doze_button">允许连接。</string>
+  <string name="setup_doze_button">允许连接</string>
   <string name="choose_nickname">设置昵称</string>
   <string name="choose_password">设置密码</string>
   <string name="confirm_password">确认密码</string>
@@ -61,6 +61,10 @@
   <string name="transport_bt">蓝牙</string>
   <string name="transport_lan">无线局域网</string>
   <!--Notifications-->
+  <string name="reminder_notification_title">退出登录 Briar</string>
+  <string name="reminder_notification_text">轻按以重新登录。</string>
+  <string name="reminder_notification_channel_title">Briar 登录提醒</string>
+  <string name="reminder_notification_dismiss">解散</string>
   <string name="ongoing_notification_title">登录 Briar</string>
   <string name="ongoing_notification_text">轻触以打开 Briar</string>
   <plurals name="private_message_notification_text">
@@ -212,6 +216,8 @@
   <plurals name="posts">
     <item quantity="other">%d 条帖子</item>
   </plurals>
+  <string name="forum_new_entry_posted">论坛帖子已发布</string>
+  <string name="forum_new_message_hint">新帖子</string>
   <string name="forum_message_reply_hint">新回复</string>
   <string name="btn_reply">回复</string>
   <string name="forum_leave">退出论坛</string>
@@ -282,7 +288,7 @@
   <string name="blogs_rss_feeds_import_button">导入</string>
   <string name="blogs_rss_feeds_import_hint">输入 RSS 订阅链接</string>
   <string name="blogs_rss_feeds_import_error">抱歉！导入订阅时出错。</string>
-  <string name="blogs_rss_feeds_manage">管理 RSS 订阅。</string>
+  <string name="blogs_rss_feeds_manage">管理 RSS 订阅</string>
   <string name="blogs_rss_feeds_manage_imported">已导入：</string>
   <string name="blogs_rss_feeds_manage_author">作者：</string>
   <string name="blogs_rss_feeds_manage_updated">最后更新于：</string>
@@ -293,6 +299,15 @@
   <string name="blogs_rss_feeds_manage_empty_state">没有订阅内容\n\n点击 + 号导入一个 RSS 信息流</string>
   <string name="blogs_rss_feeds_manage_error">加载订阅时出错。请稍候再试。</string>
   <!--Settings Display-->
+  <string name="pref_language_title">语言 &amp; 区域</string>
+  <string name="pref_language_changed">这些设置会在 Briar 重启后生效。请登出并重启 Briar。</string>
+  <string name="pref_language_default">系统默认</string>
+  <string name="display_settings_title">显示</string>
+  <string name="pref_theme_title">主题</string>
+  <string name="pref_theme_light">浅色</string>
+  <string name="pref_theme_dark">深色</string>
+  <string name="pref_theme_auto">自动（按照时间）</string>
+  <string name="pref_theme_system">系统默认</string>
   <!--Settings Network-->
   <string name="network_settings_title">网络</string>
   <string name="bluetooth_setting">通过蓝牙连接</string>
@@ -305,6 +320,9 @@
   <!--Settings Security and Panic-->
   <string name="security_settings_title">安全</string>
   <string name="change_password">更改密码</string>
+  <string name="current_password">当前密码</string>
+  <string name="choose_new_password">新密码</string>
+  <string name="confirm_new_password">确认新密码</string>
   <string name="password_changed">密码已更改。</string>
   <string name="panic_setting">创建应急开关</string>
   <string name="panic_setting_title">应急开关</string>
@@ -323,6 +341,8 @@
   <string name="uninstall_setting_summary">这需要在紧急事件中进行人工确认</string>
   <!--Settings Notifications-->
   <string name="notification_settings_title">消息提醒</string>
+  <string name="notify_sign_in_title">提醒我登录</string>
+  <string name="notify_sign_in_summary">当手机开机或应用更新时，显示提示</string>
   <string name="notify_private_messages_setting_title">私信</string>
   <string name="notify_private_messages_setting_summary">显示私信通知</string>
   <string name="notify_private_messages_setting_summary_26">配置私聊消息通知</string>
