--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -453,5 +453,7 @@
 	<string name="lock_is_locked">Briar is locked</string>
 	<string name="lock_tap_to_unlock">Tap to unlock</string>
 	<string name="lock_disabled">Only available on Android 5 or newer and when a system screen lock is set</string>
+	<!-- This is meant as an imperative, but should be shorter than: Lock the app! -->
+	<string name="lock_lock">Lock</string>
 
 </resources>
